Simplify scene CSS and fix texteditorscene UI on safari.

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ a:hover {
   }
 }
 @media (max-width: 500px) {
-  #editor-result, #TextEditorScene-wrap {
+  #TextEditorScene-wrap {
     flex-direction: column !important;
   }
 }
